syntax = "proto3";

package storage;

import "google/api/annotations.proto";

// Image
message Image {
    // Unique integer identifier of the todo task
    string id = 1;
    // The image url
    string url = 2;
    // Detail description of the todo task
    string description = 3;
    // Date and time to remind the todo task
    string title = 4;
    // The format of the image
    string format = 5;
}

// Request data to create new image
message CreateRequest{
    // API versioning: it is my best practice to specify version explicitly
    string api = 1;

    // Task entity to add
    Image image = 2;
}

// Response that contains data for created image
message CreateResponse{
    // API versioning: it is my best practice to specify version explicitly
    string api = 1;

    // ID of created image
    string id = 2;
}

// Request data to read todo task
message ReadRequest{
    // API versioning: it is my best practice to specify version explicitly
    string api = 1;

    // Unique integer identifier of the todo task
    string id = 2;
}

// Contains todo task data specified in by ID request
message ReadResponse{
    // API versioning: it is my best practice to specify version explicitly
    string api = 1;

    // Task entity read by ID
    Image image = 2;
}

// Service to manage images
service ImageService {
    // Create new image in the storage
    rpc Create(CreateRequest) returns (CreateResponse);

    // Read image
    rpc Read(ReadRequest) returns (ReadResponse){
        option (google.api.http) = {
            get: "/v1/image/{id}"
        };
    }
}